プラグイン機構が単独だとしんどい、コメント無いからなんもわからん

--- a/Source/ImageStocker/ImageStocker.csproj
+++ b/Source/ImageStocker/ImageStocker.csproj
@@ -1,7 +1,7 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
-    <RootNamespace>ContentTypeTextNet.Pe.Plugins.Sk0520.ImageStocker</RootNamespace>
+    <RootNamespace>ContentTypeTextNet.Pe.Plugins.Original.ImageStocker</RootNamespace>
     <UseWPF>true</UseWPF>
   </PropertyGroup>
 
