--- a/Source/ImageStocker/Properties/launchSettings.json
+++ b/Source/ImageStocker/Properties/launchSettings.json
@@ -3,7 +3,7 @@
 		"Plugin:Debug": {
 			"commandName": "Executable",
 			"executablePath": ".\\Pe\\Source\\Pe\\Pe.Main\\bin\\$(Platform)\\$(Configuration)\\$(TargetFramework)\\Pe.Main.exe",
-			"commandLineArgs": "--debug-dev-mode --log=.\\data\\log --force-log --full-trace-log --user-dir=.\\data\\user --machine-dir=.\\data\\machine --temp-dir=.\\data\\temp --test-plugin-dir $(TargetDir) --test-plugin-name $(TargetName) ",
+			"commandLineArgs": "--debug-dev-mode --log=.\\data\\log --force-log --full-trace-log --user-dir=.\\data\\user --machine-dir=.\\data\\machine --temp-dir=.\\data\\temp --test-plugin-dir \".\\$(ProjectName)\\bin\\$(Platform)\\$(Configuration)/$(TargetFramework)\" --test-plugin-name $(TargetName) ",
 			"workingDirectory": "$(SolutionDir)"
 		}
 	}
