--- a/.gitmodules
+++ b/.gitmodules
@@ -1,4 +1,4 @@
 [submodule "Source/Pe"]
 	path = Source/Pe
-	url = https://sk_0520@bitbucket.org/sk_0520/pe.git
+	url = https://github.com/sk-0520/Pe.git
 	branch = master
